RESOLVED FIXED300831
REGRESSION (298506@main): [PLT6] ~13% increase in time to first paint / DOMContentLoaded on Facebook
https://bugs.webkit.org/show_bug.cgi?id=300831
Summary REGRESSION (298506@main): [PLT6] ~13% increase in time to first paint / DOMCo...
Wenson Hsieh
Reported 2025-10-15 14:24:40 PDT
Attachments
Wenson Hsieh
Comment 1 2025-10-15 17:39:03 PDT
EWS
Comment 2 2025-10-15 21:08:24 PDT
Committed 301605@main (ab284b2b7879): <https://commits.webkit.org/301605@main> Reviewed commits have been landed. Closing PR #52432 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.